# BeeR-Type

./: CMakeLists.txt  Dockerfile  Doxyfile  README.md  install_dependencies.sh
BeeR-Type/: CMakeLists.txt
BeeR-Type/include/: Boss.hpp  Enemy.hpp  Game.hpp  Player.hpp  UI.hpp
BeeR-Type/src/: Boss.cpp  Bullet.cpp  Enemy.cpp  Game.cpp  Player.cpp  UI.cpp
Client/: CMakeLists.txt  main.cpp
Client/include/: Client.hpp  GameScene.hpp  LobbyScene.hpp  Scene.hpp  Sprite.hpp
Client/include/Entity/: RTYPEBoss.hpp  RTYPEBullet.hpp  RTYPEEnemy.hpp  RTYPEPlayer.hpp
Client/src/: Client.cpp  GameScene.cpp  LobbyScene.cpp  Scene.cpp
Documentation/: ECS_README.md
ECS/: CMakeLists.txt  Initialization.hpp  Registry.hpp
ECS/components/: Collidable.hpp  Controllable.hpp  Drawable.hpp  Entity.hpp  Position.hpp  Projectile.hpp  SparseArray.hpp  Velocity.hpp
ECS/systems/: CollisionSystem.hpp  ControlSystem.hpp  DrawSystem.hpp  PositionSystem.hpp  ProjectileSystem.hpp
GameEngine/: CMakeLists.txt
GameEngine/include/: AGame.hpp  IGame.hpp  PlayerAction.hpp
GameEngine/src/: AGame.cpp  PlayerAction.cpp
Network/: CMakeLists.txt  protocol.md
Network/include/: Data.hpp  GameLoader.hpp  Packet.hpp  PacketHandler.hpp  PacketType.hpp  ThreadSafeQueue.hpp
Network/src/: Packet.cpp  PacketHandler.cpp
R-Type/: CMakeLists.txt  README.md
R-Type/include/: AGame.hpp  Boss.hpp  Bullet.hpp  Enemy.hpp  Game.hpp  GameState.hpp  IGame.hpp  Players.hpp
R-Type/include/Entity/: Bullet.hpp  Player.hpp
R-Type/src/: AGame.cpp  Boss.cpp  Bullet.cpp  Enemy.cpp  Game.cpp  GameState.cpp  Players.cpp
R-Type/src/Entity/: Player.cpp
Server/: CMakeLists.txt  main.cpp
Server/Errors/: Throws.hpp
Server/include/: ClientRegister.hpp  Server.hpp
Server/src/: Server.cpp
